v4.1.2 (2016-11-xx)
---------------------------
* fixed GraphEntity for ArangoDatabase.getGraphs() (field name is null)
* added VelocyPack UTC_DATE parsing to Json String (ISO 8601)
* added configuration methods for VPackParser in ArangoDBAsync.Builder

v4.1.1 (2016-11-09)
---------------------------
* changed json parsing of VelocyPack types not known in json
* fixed VelocyPack bug with non-ASCII characters
* added missing replicationFactor in CollectionCreateOptions
* added missing replicationFactor in CollectionPropertiesEntity
* added option serializeNull in DocumentUpdateOptions

v4.1.0 (2016-10-28)
---------------------------
* changed VelocyStream communication (send protocol header)
* added VeloyPack serialization support for java.time.Instant, LocalDate, LocalDateTime
* added ArangoUtil for manually de-/serialization