@@ -211,7 +211,7 @@
 			<dependency>
 				<groupId>com.arangodb</groupId>
 				<artifactId>arangodb-java-driver</artifactId>
-				<version>4.1.1</version>
+				<version>4.1.2-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
