@@ -3,6 +3,7 @@ v4.1.2 (2016-11-xx)
 * fixed GraphEntity for ArangoDatabase.getGraphs() (field name is null)
 * added VelocyPack UTC_DATE parsing to Json String (ISO 8601)
 * added configuration methods for VPackParser in ArangoDBAsync.Builder
+* added VPackJsonSerializer for VPackParser
 
 v4.1.1 (2016-11-09)
 ---------------------------
